--- a/MailMood-frontend/index.html
+++ b/MailMood-frontend/index.html
@@ -5,88 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knowledge Base</title>
-    <style>
-        body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #9DC8C8;
-            color: #060d0d;
-            margin: 20px;
-            line-height: 1.6;
-        }
-
-        h1, h2 {
-            color: #519D9E;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        h2 {
-            font-size: 1.8em;
-            margin-top: 30px;
-            border-bottom: 2px solid #ccc;
-            padding-bottom: 5px;
-        }
-
-        form {
-            background: #519D9E;
-            padding: 45px;
-            border-radius: 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-
-        input[type="text"],
-        textarea {
-            width: 95%;
-            padding: 15px;
-            margin: 10px 0;
-            border: 5px solid #ddd;
-            border-radius: 5px;
-        }
-
-        button {
-            display: inline-block;
-            background: #D1B6E1;
-            color: #fff;
-            padding: 15px 15px;
-            border: none;
-            border-radius: 15px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        button:hover {
-            background: #0056b3;
-        }
-
-        #email-list, #email-parse, #email-analyze {
-            margin-top: 20px;
-        }
-
-        .email-item {
-            background: #fff;
-            border: 1px solid #ddd;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 15px;
-        }
-
-        .email-item:hover {
-            background: #f9f9f9;
-        }
-
-        .custom-font {
-            font-family: 'Courier New', monospace;
-            font-size: 18px;
-            font-weight: bold;
-            color: #333;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -98,15 +17,13 @@
         <button id="analyze-emails">Tap Into the Emotion!</button>
     </form>
     <div id="mycanvas">
-        <canvas id="emotionPieChart" width="600" height="600" ></canvas>
+        <canvas id="emotionPieChart" width="600" height="600"></canvas>
     </div>
     <div class="custom-font">
-        
-        <div id="response"></div>
-        <div id="responseSubject"></div>
-        <div id="responseBody"></div>
+        <div id="response" class="mail-box-background"></div>
+        <div id="responseSubject" class="mail-box-background"></div>
+        <div id="responseBody" class="mail-box-background"></div>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
