chore – remove unuse package, renamed html title

--- a/MailMood-frontend/index.html
+++ b/MailMood-frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knowledge Base</title>
+    <title>MailMood</title>
     <link rel="stylesheet" href="style.css">
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
